--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <header>
   <div class="container nav">
     <div class="brand">
-      <img src="./assets/logo.svg" alt="简通快递 Logo" class="logo-img">
+      <img src="./assets/logo.svg" class="logo-img">
       <div class="brand-text">
         <span class="brand-cn">简通快递</span>
         <span class="brand-en">Jiantong Express</span>
