--- a/index.html
+++ b/index.html
@@ -232,7 +232,26 @@
 <header>
   <div class="container nav">
     <div class="brand">
-      <img src="./assets/logo.svg" class="logo-img">
+      <svg class="logo-img" viewBox="0 0 64 64"
+     xmlns="http://www.w3.org/2000/svg"
+     aria-label="简通快递 Logo">
+  <defs>
+    <linearGradient id="jtg" x1="0" y1="0" x2="0" y2="1">
+      <stop offset="0%" stop-color="#1f3a5f"/>
+      <stop offset="100%" stop-color="#243e66"/>
+    </linearGradient>
+  </defs>
+
+  <rect x="4" y="4" width="56" height="56" rx="14" fill="url(#jtg)"/>
+  <path d="M18 34h18l-4 4"
+        fill="none"
+        stroke="#ffffff"
+        stroke-width="4"
+        stroke-linecap="round"
+        stroke-linejoin="round"/>
+  <circle cx="18" cy="34" r="3" fill="#ffffff"/>
+</svg>
+
       <div class="brand-text">
         <span class="brand-cn">简通快递</span>
         <span class="brand-en">Jiantong Express</span>
