--- a/index.html
+++ b/index.html
@@ -1,92 +1,92 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>简通快递 | Jiantong Express</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    :root{
+    :root {
       --blue:#1f3a5f;
       --blue2:#2f5f9f;
       --bg:#f7fafc;
-      --card:#ffffff;
       --border:#e5e7eb;
       --text:#1f2937;
       --muted:#6b7280;
       --tag:#eef4fb;
     }
 
-    body{
+    body {
       margin:0;
       font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",
-                   "PingFang SC","Microsoft YaHei",Arial,sans-serif;
+        "PingFang SC","Microsoft YaHei",Arial,sans-serif;
       color:var(--text);
       background:
         radial-gradient(1000px 400px at 20% 0%, rgba(47,95,159,.10), transparent 60%),
         radial-gradient(900px 380px at 80% 10%, rgba(31,58,95,.10), transparent 55%),
-        linear-gradient(180deg, var(--bg) 0%, #ffffff 55%);
+        linear-gradient(180deg, var(--bg) 0%, #fff 55%);
     }
 
-    a{ text-decoration:none; color:inherit; }
-    .container{ max-width:1100px; margin:0 auto; padding:0 20px; }
+    a { text-decoration:none; color:inherit; }
+    .container { max-width:1100px; margin:0 auto; padding:0 20px; }
 
     /* ===== Header ===== */
-    header{
+    header {
       position:sticky;
       top:0;
-      background:rgba(255,255,255,.9);
-      backdrop-filter: blur(10px);
+      background:rgba(255,255,255,.92);
+      backdrop-filter: blur(8px);
       border-bottom:1px solid var(--border);
       z-index:10;
     }
 
-    .nav{
+    .nav {
       height:70px;
       display:flex;
       align-items:center;
       justify-content:space-between;
     }
 
-    .brand{
+    .brand {
       display:flex;
       align-items:center;
       gap:12px;
     }
 
-    .logo-img{
+    .logo-svg {
       width:40px;
       height:40px;
       display:block;
+      flex-shrink:0;
     }
 
-    .brand-text{
+    .brand-text {
       display:flex;
       align-items:baseline;
       gap:10px;
     }
 
-    .brand-cn{
+    .brand-cn {
       font-size:18px;
       font-weight:700;
       color:var(--blue);
       letter-spacing:1px;
     }
 
-    .brand-en{
+    .brand-en {
       font-size:12px;
       color:var(--muted);
     }
 
-    .menu a{
+    .menu a {
       margin-left:22px;
       font-size:14px;
       color:var(--muted);
     }
 
-    .menu a:hover{ color:var(--blue); }
+    .menu a:hover { color:var(--blue); }
 
-    .lang{
+    .lang {
       margin-left:22px;
       font-size:13px;
       color:var(--blue);
@@ -94,31 +94,31 @@
     }
 
     /* ===== Hero ===== */
-    .hero{
+    .hero {
       padding:86px 0 70px;
     }
 
-    .hero h1{
+    .hero h1 {
       font-size:38px;
       margin:0 0 16px;
       color:var(--blue);
     }
 
-    .hero p{
+    .hero p {
       max-width:620px;
       margin:0;
       color:var(--muted);
       font-size:16px;
     }
 
-    .tags{
+    .tags {
       margin-top:22px;
       display:flex;
       gap:10px;
       flex-wrap:wrap;
     }
 
-    .tag{
+    .tag {
       background:var(--tag);
       color:var(--blue);
       padding:7px 14px;
@@ -127,7 +127,7 @@
       border:1px solid rgba(31,58,95,.08);
     }
 
-    .btn{
+    .btn {
       display:inline-block;
       margin-top:30px;
       padding:12px 28px;
@@ -138,57 +138,55 @@
       box-shadow:0 10px 24px rgba(31,58,95,.18);
     }
 
-    /* ===== Sections ===== */
-    section{ padding:70px 0; }
-    h2{ font-size:26px; margin:0 0 30px; color:var(--blue); }
+    section { padding:70px 0; }
+    h2 { font-size:26px; margin:0 0 30px; color:var(--blue); }
 
-    .grid{
+    .grid {
       display:grid;
       grid-template-columns:repeat(auto-fit, minmax(230px,1fr));
       gap:22px;
     }
 
-    .card{
-      background:var(--card);
+    .card {
+      background:#fff;
       border:1px solid var(--border);
       border-radius:14px;
       padding:26px;
       box-shadow:0 6px 18px rgba(17,24,39,.04);
     }
 
-    .card h3{
+    .card h3 {
       margin:0 0 10px;
       font-size:16px;
       color:var(--blue);
     }
 
-    .card p{
+    .card p {
       margin:0;
       font-size:14px;
       color:var(--muted);
     }
 
     /* ===== Tracking ===== */
-    .track{ max-width:560px; }
+    .track { max-width:560px; }
 
-    .row{
+    .row {
       display:flex;
       gap:10px;
       margin-top:14px;
       flex-wrap:wrap;
     }
 
-    input{
+    input {
       flex:1 1 260px;
       padding:14px;
       border-radius:12px;
       border:1px solid var(--border);
       font-size:14px;
       outline:none;
-      background:#fff;
     }
 
-    button{
+    button {
       padding:14px 18px;
       border-radius:12px;
       border:1px solid rgba(31,58,95,.25);
@@ -198,21 +196,19 @@
       cursor:pointer;
     }
 
-    button:hover{ background:rgba(31,58,95,.05); }
+    button:hover { background:rgba(31,58,95,.05); }
 
-    .result{
+    .result {
       margin-top:14px;
       padding:14px;
       border-radius:12px;
       border:1px dashed rgba(31,58,95,.35);
       color:var(--muted);
       font-size:14px;
-      background:rgba(255,255,255,.7);
       white-space:pre-line;
     }
 
-    /* ===== Footer ===== */
-    footer{
+    footer {
       border-top:1px solid var(--border);
       background:#fff;
       padding:26px 0;
@@ -221,8 +217,8 @@
       color:var(--muted);
     }
 
-    @media (max-width:768px){
-      .hero h1{ font-size:30px; }
+    @media (max-width:768px) {
+      .hero h1 { font-size:30px; }
     }
   </style>
 </head>
@@ -232,25 +228,23 @@
 <header>
   <div class="container nav">
     <div class="brand">
-      <svg class="logo-img" viewBox="0 0 64 64"
-     xmlns="http://www.w3.org/2000/svg"
-     aria-label="简通快递 Logo">
-  <defs>
-    <linearGradient id="jtg" x1="0" y1="0" x2="0" y2="1">
-      <stop offset="0%" stop-color="#1f3a5f"/>
-      <stop offset="100%" stop-color="#243e66"/>
-    </linearGradient>
-  </defs>
-
-  <rect x="4" y="4" width="56" height="56" rx="14" fill="url(#jtg)"/>
-  <path d="M18 34h18l-4 4"
-        fill="none"
-        stroke="#ffffff"
-        stroke-width="4"
-        stroke-linecap="round"
-        stroke-linejoin="round"/>
-  <circle cx="18" cy="34" r="3" fill="#ffffff"/>
-</svg>
+      <!-- ===== 内嵌 SVG LOGO（100%显示）===== -->
+      <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-label="简通快递 Logo">
+        <defs>
+          <linearGradient id="jtg" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="#1f3a5f"/>
+            <stop offset="100%" stop-color="#243e66"/>
+          </linearGradient>
+        </defs>
+        <rect x="4" y="4" width="56" height="56" rx="14" fill="url(#jtg)"/>
+        <path d="M18 34h18l-4 4"
+              fill="none"
+              stroke="#ffffff"
+              stroke-width="4"
+              stroke-linecap="round"
+              stroke-linejoin="round"/>
+        <circle cx="18" cy="34" r="3" fill="#ffffff"/>
+      </svg>
 
       <div class="brand-text">
         <span class="brand-cn">简通快递</span>
