--- a/index.html
+++ b/index.html
@@ -1,374 +1,173 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <title>简通快递 | Jiantong Express</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    :root {
-      --blue:#1f3a5f;
-      --blue2:#2f5f9f;
-      --bg:#f7fafc;
-      --border:#e5e7eb;
-      --text:#1f2937;
-      --muted:#6b7280;
-      --tag:#eef4fb;
-    }
-
-    body {
-      margin:0;
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",
-        "PingFang SC","Microsoft YaHei",Arial,sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1000px 400px at 20% 0%, rgba(47,95,159,.10), transparent 60%),
-        radial-gradient(900px 380px at 80% 10%, rgba(31,58,95,.10), transparent 55%),
-        linear-gradient(180deg, var(--bg) 0%, #fff 55%);
-    }
-
-    a { text-decoration:none; color:inherit; }
-    .container { max-width:1100px; margin:0 auto; padding:0 20px; }
-
-    /* ===== Header ===== */
-    header {
-      position:sticky;
-      top:0;
-      background:rgba(255,255,255,.92);
-      backdrop-filter: blur(8px);
-      border-bottom:1px solid var(--border);
-      z-index:10;
-    }
-
-    .nav {
-      height:70px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-    }
-
-    .brand {
-      display:flex;
-      align-items:center;
-      gap:12px;
-    }
-
-    .logo-svg {
-      width:40px;
-      height:40px;
-      display:block;
-      flex-shrink:0;
-    }
-
-    .brand-text {
-      display:flex;
-      align-items:baseline;
-      gap:10px;
-    }
-
-    .brand-cn {
-      font-size:18px;
-      font-weight:700;
-      color:var(--blue);
-      letter-spacing:1px;
-    }
-
-    .brand-en {
-      font-size:12px;
-      color:var(--muted);
-    }
-
-    .menu a {
-      margin-left:22px;
-      font-size:14px;
-      color:var(--muted);
-    }
-
-    .menu a:hover { color:var(--blue); }
-
-    .lang {
-      margin-left:22px;
-      font-size:13px;
-      color:var(--blue);
-      cursor:pointer;
-    }
-
-    /* ===== Hero ===== */
-    .hero {
-      padding:86px 0 70px;
-    }
-
-    .hero h1 {
-      font-size:38px;
-      margin:0 0 16px;
-      color:var(--blue);
-    }
-
-    .hero p {
-      max-width:620px;
-      margin:0;
-      color:var(--muted);
-      font-size:16px;
-    }
-
-    .tags {
-      margin-top:22px;
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-    }
-
-    .tag {
-      background:var(--tag);
-      color:var(--blue);
-      padding:7px 14px;
-      border-radius:999px;
-      font-size:13px;
-      border:1px solid rgba(31,58,95,.08);
-    }
-
-    .btn {
-      display:inline-block;
-      margin-top:30px;
-      padding:12px 28px;
-      border-radius:10px;
-      background:linear-gradient(135deg, var(--blue) 0%, var(--blue2) 100%);
-      color:#fff;
-      font-size:14px;
-      box-shadow:0 10px 24px rgba(31,58,95,.18);
-    }
-
-    section { padding:70px 0; }
-    h2 { font-size:26px; margin:0 0 30px; color:var(--blue); }
-
-    .grid {
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(230px,1fr));
-      gap:22px;
-    }
-
-    .card {
-      background:#fff;
-      border:1px solid var(--border);
-      border-radius:14px;
-      padding:26px;
-      box-shadow:0 6px 18px rgba(17,24,39,.04);
-    }
-
-    .card h3 {
-      margin:0 0 10px;
-      font-size:16px;
-      color:var(--blue);
-    }
-
-    .card p {
-      margin:0;
-      font-size:14px;
-      color:var(--muted);
-    }
-
-    /* ===== Tracking ===== */
-    .track { max-width:560px; }
-
-    .row {
-      display:flex;
-      gap:10px;
-      margin-top:14px;
-      flex-wrap:wrap;
-    }
-
-    input {
-      flex:1 1 260px;
-      padding:14px;
-      border-radius:12px;
-      border:1px solid var(--border);
-      font-size:14px;
-      outline:none;
-    }
-
-    button {
-      padding:14px 18px;
-      border-radius:12px;
-      border:1px solid rgba(31,58,95,.25);
-      background:#fff;
-      color:var(--blue);
-      font-weight:600;
-      cursor:pointer;
-    }
-
-    button:hover { background:rgba(31,58,95,.05); }
-
-    .result {
-      margin-top:14px;
-      padding:14px;
-      border-radius:12px;
-      border:1px dashed rgba(31,58,95,.35);
-      color:var(--muted);
-      font-size:14px;
-      white-space:pre-line;
-    }
-
-    footer {
-      border-top:1px solid var(--border);
-      background:#fff;
-      padding:26px 0;
-      text-align:center;
-      font-size:13px;
-      color:var(--muted);
-    }
-
-    @media (max-width:768px) {
-      .hero h1 { font-size:30px; }
-    }
-  </style>
+<meta charset="UTF-8">
+<title>简通快递</title>
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
+<script>
+  function openModal(){
+    document.getElementById("modal").style.display="flex";
+  }
+  function closeModal(){
+    document.getElementById("modal").style.display="none";
+  }
+</script>
 
 <body>
 
 <header>
-  <div class="container nav">
-    <div class="brand">
-      <!-- ===== 内嵌 SVG LOGO（100%显示）===== -->
-      <svg class="logo-svg" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-label="简通快递 Logo">
-        <defs>
-          <linearGradient id="jtg" x1="0" y1="0" x2="0" y2="1">
-            <stop offset="0%" stop-color="#1f3a5f"/>
-            <stop offset="100%" stop-color="#243e66"/>
-          </linearGradient>
-        </defs>
-        <rect x="4" y="4" width="56" height="56" rx="14" fill="url(#jtg)"/>
-        <path d="M18 34h18l-4 4"
-              fill="none"
-              stroke="#ffffff"
-              stroke-width="4"
-              stroke-linecap="round"
-              stroke-linejoin="round"/>
-        <circle cx="18" cy="34" r="3" fill="#ffffff"/>
-      </svg>
+  <div class="container header-inner">
+   <div class="logo" style="display:flex;align-items:center;gap:12px;line-height:1;">
+  <img src="assets/img/logo.png" alt="简通快递" style="height:36px;">
+  <span style="font-size:38px;font-weight:700;letter-spacing:2px;">
+    简通快递
+  </span>
+</div>
 
-      <div class="brand-text">
-        <span class="brand-cn">简通快递</span>
-        <span class="brand-en">Jiantong Express</span>
-      </div>
-    </div>
 
-    <div class="menu">
-      <a href="#home" data-cn="首页" data-en="Home"></a>
-      <a href="#services" data-cn="服务" data-en="Services"></a>
-      <a href="#tracking" data-cn="查询" data-en="Tracking"></a>
-      <a href="#contact" data-cn="联系" data-en="Contact"></a>
-      <span class="lang" onclick="toggleLang()">中 / EN</span>
-    </div>
+   <nav>
+  <a href="./index.html">首页</a> ｜ 
+  <a href="./services-international.html">服务</a> ｜ 
+  <a href="./query.html">查询</a> ｜ 
+  <a href="./about.html">关于</a> ｜ 
+  <a href="./contact.html">联系</a>
+</nav>
+
   </div>
 </header>
 
-<div id="home" class="container hero">
-  <h1 data-cn="专注国际专线的稳定快递服务"
-      data-en="Reliable International Express Services"></h1>
-
-  <p data-cn="简通快递以流程化与系统化为核心，为客户提供清晰、可控、可持续的国际快递解决方案。"
-     data-en="Jiantong Express provides transparent and controllable international express solutions through systematic operations."></p>
-
-  <div class="tags">
-    <span class="tag" data-cn="国际专线" data-en="International Lines"></span>
-    <span class="tag" data-cn="快递时效稳定" data-en="Stable Transit Time"></span>
-    <span class="tag" data-cn="系统化管理" data-en="System-driven"></span>
-    <span class="tag" data-cn="接口预留" data-en="API-ready"></span>
+<div class="hero">
+  <div class="hero-inner">
+    <h1>专注国际快递与跨境物流解决方案</h1>
+    <p>为跨境电商与国际贸易企业提供稳定、安全、透明的一站式国际快递解决方案。</p>
+    <div class="btns">
+      <a href="#query" class="btn-primary">快递查询</a>
+      <a href="#services" class="btn-outline">了解服务</a>
+    </div>
   </div>
-
-  <a href="#contact" class="btn" data-cn="联系我们" data-en="Contact Us"></a>
 </div>
 
+<section>
+  <div class="container">
+    <h2 class="section-title">我们是谁</h2>
+    <p class="lead">简通快递专注国际专线与跨境物流服务，面向跨境电商与外贸企业，提供可预期、可追踪、可复制的国际快递解决方案。</p>
+  </div>
+</section>
+<!-- ================= 首页第二屏：服务结构 + 咨询钩子 ================= -->
+"<section class="home-about">
+  <div class="container">
+
+    <h2 class="home-about-title">关于简通国际物流</h2>
+
+    <p class="home-about-text">
+      简通国际物流是一家深耕全球供应链服务的综合性国际物流企业，
+      致力于以专业、高效、可靠的服务，搭建中外贸易互联互通的坚实桥梁。
+    </p>
+
+    <p class="home-about-text">
+      我们依托全球化视野与本土化深耕，为跨境电商与外贸企业提供
+      国际专线、双清包税（<strong>国际快递 + 国际物流</strong>）
+      在内的一站式跨境物流解决方案，
+      覆盖全球 120+ 国家和地区，让国际运输更简单、更通畅。
+    </p>
+
+  </div>
+</section>
+
+
+    <!-- 咨询钩子 -->
+    <div class="home-cta">
+      <h3>不确定你的货适不适合走双清？</h3>
+      <p>不报价，也可以先帮你判断能不能走、怎么走更稳。</p>
+      <button onclick="openModal()">先咨询一下</button>
+    </div>
+
+  </div>
+</section>
+
+<!-- 弹窗 -->
+<div class="modal" id="modal">
+  <div class="modal-box">
+    <div class="close" onclick="closeModal()">关闭</div>
+
+    <h3>咨询 / 查询</h3>
+    <p style="font-size:14px;color:#6b7280;margin-bottom:16px;">
+      不报价也没关系，先帮您判断能不能走、怎么走更稳
+    </p>
+
+    <!-- 必填：客户名称 -->
+    <input
+      type="text"
+      placeholder="客户名称 / 公司名称（必填）"
+      required
+    >
+
+    <!-- 必填：手机号 -->
+    <input
+      type="tel"
+      placeholder="联系电话 / 微信号（必填）"
+      required
+    >
+
+    <!-- 选填 -->
+    <textarea
+      placeholder="货物类型 / 国家 / 大概重量（选填）"
+    ></textarea>
+
+    <button class="submit" onclick="closeModal()">
+      提交咨询
+    </button>
+
+    <p style="font-size:12px;color:#9ca3af;margin-top:10px;text-align:center;">
+      我们不会群发广告，仅针对您的运输需求进行沟通
+    </p>
+  </div>
+</div>
+
+
+<section>
+  <div class="container">
+    <h2 class="section-title">核心优势</h2>
+    <div class="grid-4">
+      <div class="card"><h3>稳定时效</h3><p>固定航线与稳定班期，保障交付。</p></div>
+      <div class="card"><h3>覆盖广泛</h3><p>多国多线，满足不同市场需求。</p></div>
+      <div class="card"><h3>价格透明</h3><p>一口报价，无隐性费用。</p></div>
+      <div class="card"><h3>全程追踪</h3><p>货物状态清晰可查。</p></div>
+    </div>
+  </div>
+</section>
+
 <section id="services">
-  <div class="container">
-    <h2 data-cn="核心服务" data-en="Our Services"></h2>
-    <div class="grid">
-      <div class="card">
-        <h3 data-cn="国际专线快递" data-en="International Express Lines"></h3>
-        <p data-cn="固定线路，稳定时效，适合长期合作。"
-           data-en="Fixed routes with stable transit time."></p>
-      </div>
-      <div class="card">
-        <h3 data-cn="跨境电商快递" data-en="Cross-border E-commerce Express"></h3>
-        <p data-cn="支持多平台发货需求，流程清晰可控。"
-           data-en="Supports multi-platform shipping needs."></p>
-      </div>
-      <div class="card">
-        <h3 data-cn="清关与派送" data-en="Customs & Last-mile Delivery"></h3>
-        <p data-cn="成熟渠道，降低异常与延误风险。"
-           data-en="Reliable partners to reduce delays."></p>
-      </div>
-      <div class="card">
-        <h3 data-cn="系统接口支持" data-en="System API Support"></h3>
-        <p data-cn="预留快递公司接口与实时汇率对接能力。"
-           data-en="Ready for express APIs and exchange rate integration."></p>
-      </div>
-    </div>
+  <div class="container services">
+    <h2 class="section-title">我们的服务</h2>
+    <ul>
+      <li>国际快递（DHL / FedEx / UPS）</li>
+      <li>FBA 头程（空运 / 海运）</li>
+      <li>东南亚 / 日韩跨境专线</li>
+      <li>海外仓配与一件代发</li>
+    </ul>
   </div>
 </section>
 
-<section id="tracking">
+<section id="query">
   <div class="container">
-    <h2 data-cn="快递查询" data-en="Express Tracking"></h2>
-    <div class="card track">
-      <p data-cn="请输入快递单号（演示版，不接真实接口）"
-         data-en="Enter tracking number (demo, no real API)."></p>
-
-      <div class="row">
-        <input id="tn" placeholder="例如：JT20251226001">
-        <button onclick="track()" data-cn="查询" data-en="Search"></button>
-      </div>
-
-      <div id="out" class="result"
-           data-cn="提示：后续可在这里对接快递公司接口，展示实时轨迹。"
-           data-en="Tip: This area can be wired to carrier tracking APIs later."></div>
-    </div>
-  </div>
-</section>
-
-<section id="contact">
-  <div class="container">
-    <h2 data-cn="联系我们" data-en="Contact"></h2>
-    <div class="card">
-      <p>电话 / Phone：待填写</p>
-      <p>邮箱 / Email：待填写</p>
-      <p>微信 / WeChat：待填写</p>
+    <h2 class="section-title">快递查询</h2>
+    <div class="query">
+      <input placeholder="运单号">
+      <input placeholder="客户名称">
+      <input placeholder="联系电话">
+      <button>查询</button>
     </div>
   </div>
 </section>
 
 <footer>
-  © 简通快递 Jiantong Express
+  <div class="container">
+    <p>简通快递 · 南京</p>
+    <p>© 2026 JIANTONG EXPRESS</p>
+  </div>
 </footer>
-
-<script>
-  let isCN = true;
-
-  function applyLang(){
-    document.querySelectorAll('[data-cn]').forEach(el=>{
-      el.innerText = isCN ? el.dataset.cn : el.dataset.en;
-    });
-  }
-
-  function toggleLang(){
-    isCN = !isCN;
-    applyLang();
-  }
-
-  function track(){
-    const v = document.getElementById('tn').value.trim();
-    const out = document.getElementById('out');
-    if(!v){
-      out.innerText = isCN ? '请输入快递单号再查询。' : 'Please enter a tracking number.';
-      return;
-    }
-    out.innerText = isCN
-      ? `单号：${v}\n状态：已受理（演示）\n说明：后续可接入真实快递接口。`
-      : `Tracking: ${v}\nStatus: Accepted (demo)\nNote: Ready for real API integration.`;
-  }
-
-  applyLang();
-</script>
 
 </body>
 </html>
