恢复 CSS 和 Logo 资源文件，修复页面样式

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
   <div class="container header-inner">
    <div class="logo" style="display:flex;align-items:center;gap:12px;line-height:1;">
-  <img src="assets/img/logo.png" alt="简通快递" style="height:36px;">
+  <img src="assets/img/logo.svg" alt="简通快递" style="height:36px;">
   <span style="font-size:38px;font-weight:700;letter-spacing:2px;">
     简通快递
   </span>
