添加客服聊天窗口、物流流程展示和视频播放器接口

--- a/index.html
+++ b/index.html
@@ -12,6 +12,52 @@
   function closeModal(){
     document.getElementById("modal").style.display="none";
   }
+  
+  // 客服聊天窗口控制
+  function toggleChatWindow(){
+    const chatWindow = document.getElementById("chatWindow");
+    chatWindow.style.display = chatWindow.style.display === "none" ? "flex" : "none";
+  }
+  
+  function closeChatWindow(){
+    document.getElementById("chatWindow").style.display = "none";
+  }
+  
+  function sendChatMessage(){
+    const input = document.getElementById("chatInput");
+    const message = input.value.trim();
+    if(message){
+      const messagesDiv = document.getElementById("chatMessages");
+      const msgEl = document.createElement("div");
+      msgEl.className = "chat-message user-message";
+      msgEl.textContent = message;
+      messagesDiv.appendChild(msgEl);
+      input.value = "";
+      messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      
+      // 模拟客服回复
+      setTimeout(() => {
+        const replyEl = document.createElement("div");
+        replyEl.className = "chat-message service-message";
+        replyEl.textContent = "感谢您的咨询，我们客服已收到您的消息，稍后为您服务。";
+        messagesDiv.appendChild(replyEl);
+        messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      }, 500);
+    }
+  }
+  
+  // 视频播放器
+  function playVideo(videoId){
+    const modal = document.getElementById("videoModal");
+    const iframe = document.getElementById("videoIframe");
+    iframe.src = "https://www.youtube.com/embed/" + videoId;
+    modal.style.display = "flex";
+  }
+  
+  function closeVideoModal(){
+    document.getElementById("videoModal").style.display = "none";
+    document.getElementById("videoIframe").src = "";
+  }
 </script>
 
 <body>
@@ -162,12 +208,112 @@
   </div>
 </section>
 
+<!-- ================= 物流流程与视频介绍 ================= -->
+<section class="logistics-section">
+  <div class="container">
+    <h2 class="section-title">物流解决方案</h2>
+    
+    <!-- 物流流程图片区 -->
+    <div class="logistics-process">
+      <div class="process-step">
+        <div class="process-icon logistics-img-1"></div>
+        <h4>揽收打单</h4>
+        <p>专业上门揽收，快速打单处理</p>
+      </div>
+      <div class="process-arrow">→</div>
+      <div class="process-step">
+        <div class="process-icon logistics-img-2"></div>
+        <h4>国内集中</h4>
+        <p>集散中心集中分拣打板</p>
+      </div>
+      <div class="process-arrow">→</div>
+      <div class="process-step">
+        <div class="process-icon logistics-img-3"></div>
+        <h4>国际运输</h4>
+        <p>空运/海运国际专线直达</p>
+      </div>
+      <div class="process-arrow">→</div>
+      <div class="process-step">
+        <div class="process-icon logistics-img-4"></div>
+        <h4>清关配送</h4>
+        <p>目的国清关及末端派送</p>
+      </div>
+    </div>
+
+    <!-- 视频介绍区 -->
+    <div class="video-section">
+      <h3 class="video-title">公司介绍</h3>
+      <div class="video-container">
+        <div class="video-placeholder" onclick="playVideo('VIDEO_ID_1')">
+          <div class="play-button">▶</div>
+          <p class="video-desc">简通快递公司介绍</p>
+        </div>
+        <div class="video-placeholder" onclick="playVideo('VIDEO_ID_2')">
+          <div class="play-button">▶</div>
+          <p class="video-desc">国际物流服务流程</p>
+        </div>
+        <div class="video-placeholder" onclick="playVideo('VIDEO_ID_3')">
+          <div class="play-button">▶</div>
+          <p class="video-desc">客户案例分享</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- 视频播放弹窗 -->
+<div class="modal" id="videoModal">
+  <div class="modal-box video-modal-box">
+    <div class="close" onclick="closeVideoModal()">关闭</div>
+    <iframe 
+      id="videoIframe"
+      width="100%" 
+      height="500" 
+      src="" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
+
 <footer>
   <div class="container">
     <p>简通快递 · 南京</p>
     <p>© 2026 JIANTONG EXPRESS</p>
   </div>
 </footer>
+
+<!-- ================= 客服聊天窗口 ================= -->
+<!-- 客服聊天浮窗按钮 -->
+<div class="chat-button" onclick="toggleChatWindow()" title="客服聊天">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+  </svg>
+</div>
+
+<!-- 客服聊天窗口 -->
+<div class="chat-window" id="chatWindow">
+  <div class="chat-header">
+    <h4>客服中心</h4>
+    <button class="chat-close" onclick="closeChatWindow()">×</button>
+  </div>
+  <div class="chat-messages" id="chatMessages">
+    <div class="chat-message service-message">
+      您好，欢迎咨询简通快递！请问有什么可以帮助您的吗？
+    </div>
+  </div>
+  <div class="chat-input-area">
+    <input 
+      type="text" 
+      id="chatInput"
+      class="chat-input" 
+      placeholder="输入消息..."
+      onkeypress="if(event.key==='Enter') sendChatMessage()"
+    >
+    <button class="chat-send" onclick="sendChatMessage()">发送</button>
+  </div>
+</div>
 
 </body>
 </html>
