集成优势卡片到Bento Grid 并添加动画效果

--- a/index.html
+++ b/index.html
@@ -367,27 +367,55 @@
 </div>
 
 
-<section>
-  <div class="container">
-    <h2 class="section-title">核心优势</h2>
-    <div class="grid-4">
-      <div class="card"><h3>稳定时效</h3><p>固定航线与稳定班期，保障交付。</p></div>
-      <div class="card"><h3>覆盖广泛</h3><p>多国多线，满足不同市场需求。</p></div>
-      <div class="card"><h3>价格透明</h3><p>一口报价，无隐性费用。</p></div>
-      <div class="card"><h3>全程追踪</h3><p>货物状态清晰可查。</p></div>
-    </div>
-  </div>
-</section>
-
 <section id="services">
-  <div class="container services">
-    <h2 class="section-title">我们的服务</h2>
-    <ul>
-      <li>国际快递（DHL / FedEx / UPS）</li>
-      <li>FBA 头程（空运 / 海运）</li>
-      <li>东南亚 / 日韩跨境专线</li>
-      <li>海外仓配与一件代发</li>
-    </ul>
+  <div class="container">
+    <h2 class="section-title">我们的产品及服务</h2>
+    <p class="section-subtitle">
+      简通国际全球仓储布局，提供运输、仓储、报关、供应链管理等全面物流支持。
+    </p>
+
+    <!-- Bento Grid 动态网格 -->
+    <div class="bento-grid">
+      <!-- 优势卡片 1: 稳定时效 -->
+      <div class="bento-item bento-advantage" data-index="0">
+        <div class="bento-bg" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+        <div class="bento-content">
+          <div class="bento-icon">⏱️</div>
+          <h3>稳定时效</h3>
+          <p>固定航线与稳定班期，保障交付。</p>
+        </div>
+      </div>
+
+      <!-- 优势卡片 2: 覆盖广泛 -->
+      <div class="bento-item bento-advantage" data-index="1">
+        <div class="bento-bg" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
+        <div class="bento-content">
+          <div class="bento-icon">🌍</div>
+          <h3>覆盖广泛</h3>
+          <p>多国多线，满足不同市场需求。</p>
+        </div>
+      </div>
+
+      <!-- 优势卡片 3: 价格透明 -->
+      <div class="bento-item bento-advantage" data-index="2">
+        <div class="bento-bg" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
+        <div class="bento-content">
+          <div class="bento-icon">💰</div>
+          <h3>价格透明</h3>
+          <p>一口报价，无隐性费用。</p>
+        </div>
+      </div>
+
+      <!-- 优势卡片 4: 全程追踪 -->
+      <div class="bento-item bento-advantage" data-index="3">
+        <div class="bento-bg" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);"></div>
+        <div class="bento-content">
+          <div class="bento-icon">📍</div>
+          <h3>全程追踪</h3>
+          <p>货物状态清晰可查。</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
