为 Hero 横幅添加动态效果和 Bento 风格卡片

--- a/index.html
+++ b/index.html
@@ -280,11 +280,31 @@
 
 <div class="hero">
   <div class="hero-inner">
-    <h1>专注国际快递与跨境物流解决方案</h1>
-    <p>为跨境电商与国际贸易企业提供稳定、安全、透明的一站式国际快递解决方案。</p>
+    <h1 class="hero-title">专注国际快递与跨境物流解决方案</h1>
+    <p class="hero-subtitle">为跨境电商与国际贸易企业提供稳定、安全、透明的一站式国际快递解决方案。</p>
     <div class="btns">
       <a href="#query" class="btn-primary">快递查询</a>
       <a href="#services" class="btn-outline">了解服务</a>
+    </div>
+    
+    <!-- Bento 风格快捷卡片 -->
+    <div class="hero-bento">
+      <div class="hero-card" data-delay="0.2">
+        <div class="hero-card-icon">📦</div>
+        <div class="hero-card-text">120+国家</div>
+      </div>
+      <div class="hero-card" data-delay="0.3">
+        <div class="hero-card-icon">⚡</div>
+        <div class="hero-card-text">快速清关</div>
+      </div>
+      <div class="hero-card" data-delay="0.4">
+        <div class="hero-card-icon">🔒</div>
+        <div class="hero-card-text">安全可靠</div>
+      </div>
+      <div class="hero-card" data-delay="0.5">
+        <div class="hero-card-icon">💼</div>
+        <div class="hero-card-text">专业服务</div>
+      </div>
     </div>
   </div>
 </div>
