--- a/index.html
+++ b/index.html
@@ -287,23 +287,52 @@
       <a href="#services" class="btn-outline">了解服务</a>
     </div>
     
-    <!-- Bento 风格快捷卡片 -->
-    <div class="hero-bento">
-      <div class="hero-card" data-delay="0.2">
-        <div class="hero-card-icon">📦</div>
-        <div class="hero-card-text">120+国家</div>
-      </div>
-      <div class="hero-card" data-delay="0.3">
-        <div class="hero-card-icon">⚡</div>
-        <div class="hero-card-text">快速清关</div>
-      </div>
-      <div class="hero-card" data-delay="0.4">
-        <div class="hero-card-icon">🔒</div>
-        <div class="hero-card-text">安全可靠</div>
-      </div>
-      <div class="hero-card" data-delay="0.5">
-        <div class="hero-card-icon">💼</div>
-        <div class="hero-card-text">专业服务</div>
+    <!-- 我们的产品及服务 -->
+    <div class="hero-services">
+      <h3 class="hero-services-title">我们的产品及服务</h3>
+      <p class="hero-services-subtitle">简通国际全球仓储布局，提供运输、仓储、报关、供应链管理等全面物流支持</p>
+      
+      <!-- Bento Grid 优势卡片 -->
+      <div class="hero-bento-grid">
+        <!-- 优势卡片 1: 稳定时效 -->
+        <div class="hero-service-card" data-delay="0.8">
+          <div class="hero-service-bg" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+          <div class="hero-service-content">
+            <div class="hero-service-icon">⏱️</div>
+            <h4>稳定时效</h4>
+            <p>固定航线与稳定班期，保障交付</p>
+          </div>
+        </div>
+
+        <!-- 优势卡片 2: 覆盖广泛 -->
+        <div class="hero-service-card" data-delay="1.0">
+          <div class="hero-service-bg" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
+          <div class="hero-service-content">
+            <div class="hero-service-icon">🌍</div>
+            <h4>覆盖广泛</h4>
+            <p>多国多线，满足不同市场需求</p>
+          </div>
+        </div>
+
+        <!-- 优势卡片 3: 价格透明 -->
+        <div class="hero-service-card" data-delay="1.2">
+          <div class="hero-service-bg" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
+          <div class="hero-service-content">
+            <div class="hero-service-icon">💰</div>
+            <h4>价格透明</h4>
+            <p>一口报价，无隐性费用</p>
+          </div>
+        </div>
+
+        <!-- 优势卡片 4: 全程追踪 -->
+        <div class="hero-service-card" data-delay="1.4">
+          <div class="hero-service-bg" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);"></div>
+          <div class="hero-service-content">
+            <div class="hero-service-icon">📍</div>
+            <h4>全程追踪</h4>
+            <p>货物状态清晰可查</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -386,58 +415,6 @@
   </div>
 </div>
 
-
-<section id="services">
-  <div class="container">
-    <h2 class="section-title">我们的产品及服务</h2>
-    <p class="section-subtitle">
-      简通国际全球仓储布局，提供运输、仓储、报关、供应链管理等全面物流支持。
-    </p>
-
-    <!-- Bento Grid 动态网格 -->
-    <div class="bento-grid">
-      <!-- 优势卡片 1: 稳定时效 -->
-      <div class="bento-item bento-advantage" data-index="0">
-        <div class="bento-bg" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
-        <div class="bento-content">
-          <div class="bento-icon">⏱️</div>
-          <h3>稳定时效</h3>
-          <p>固定航线与稳定班期，保障交付。</p>
-        </div>
-      </div>
-
-      <!-- 优势卡片 2: 覆盖广泛 -->
-      <div class="bento-item bento-advantage" data-index="1">
-        <div class="bento-bg" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
-        <div class="bento-content">
-          <div class="bento-icon">🌍</div>
-          <h3>覆盖广泛</h3>
-          <p>多国多线，满足不同市场需求。</p>
-        </div>
-      </div>
-
-      <!-- 优势卡片 3: 价格透明 -->
-      <div class="bento-item bento-advantage" data-index="2">
-        <div class="bento-bg" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
-        <div class="bento-content">
-          <div class="bento-icon">💰</div>
-          <h3>价格透明</h3>
-          <p>一口报价，无隐性费用。</p>
-        </div>
-      </div>
-
-      <!-- 优势卡片 4: 全程追踪 -->
-      <div class="bento-item bento-advantage" data-index="3">
-        <div class="bento-bg" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);"></div>
-        <div class="bento-content">
-          <div class="bento-icon">📍</div>
-          <h3>全程追踪</h3>
-          <p>货物状态清晰可查。</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section id="query">
   <div class="container">
