修复导航栏链接，改为页面内锚点

--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
 
 
    <nav>
-  <a href="./index.html">首页</a> ｜ 
-  <a href="./services-international.html">服务</a> ｜ 
-  <a href="./query.html">查询</a> ｜ 
-  <a href="./about.html">关于</a> ｜ 
-  <a href="./contact.html">联系</a>
+  <a href="#">首页</a> ｜ 
+  <a href="#services">服务</a> ｜ 
+  <a href="#query">查询</a> ｜ 
+  <a href="#news">动态</a> ｜ 
+  <a href="#contact">联系</a>
 </nav>
 
   </div>
@@ -589,7 +589,7 @@
 </section>
 
 <!-- 咨询钩子 -->
-<section class="cta-section">
+<section class="cta-section" id="services">
   <div class="container">
 
 <!-- 弹窗 -->
@@ -645,7 +645,7 @@
 </section>
 
 <!-- ================= 新闻动态 ================= -->
-<section class="news-section">
+<section class="news-section" id="news">
   <div class="container">
     <div class="section-header">
       <h2 class="section-title">新闻动态</h2>
@@ -803,10 +803,11 @@
   </div>
 </div>
 
-<footer>
+<footer id="contact">
   <div class="container">
     <p>简通快递 · 南京</p>
     <p>© 2026 JIANTONG EXPRESS</p>
+    <p style="margin-top: 10px;">📞 客服热线：400-123-4567 | 📧 邮箱：service@jiantong.com</p>
   </div>
 </footer>
 
